--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ variables:
 
 stages:
 - stage: Build
-    displayName: Build and push stage
+    displayName: 'Build and push stage'
     jobs:
     - job: Build
     displayName: Build
@@ -25,7 +25,7 @@ stages:
         vmImage: $(vmImageName)
     steps:
     - task: Docker@2
-        displayName: Build and push an image to container registry
+        displayName: 'Build and push an image to container registry'
         inputs:
         command: buildAndPush
         repository: $(imageRepository)
