--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ resources:
 variables:
     imageRepository: 'becadocker'
     containerRegistry: 'becacontainerregistry.azurecr.io'
-    dockerfilePath: '$(Build.SourcesDirectory)/app/Dockerfile'
+    dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
     tag: '$(Build.BuildId)'
 
     # Agent VM image name
