--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ resources:
 - repo: self
 
 variables:
-    azureSubscription: '7708fe25-6840-4024-9ca2-abaa70339018'
+    azureSubscription: 'Visual Studio Enterprise Subscription'
     appName: 'beca-sample-docker-web-app'
     imageRepository: 'becadocker'
     containerRegistry: 'becacontainerregistry.azurecr.io'
@@ -30,9 +30,12 @@ jobs:
       dockerId: $(dockerId)
       dockerPassword: $(dockerPassword)
 
-- task: AzureWebAppContainer@1
+- job: Deploy
+  displayName: Deploy
+  steps:
+  - task: AzureWebAppContainer@1
     displayName: 'Azure Web App on Container Deploy'
     inputs:
-        azureSubscription: $(azureSubscription)
-        appName: $(appName)
-        containers: $(containerRegistry)/$(imageRepository):$(tag)
+      azureSubscription: $(azureSubscription)
+      appName: $(appName)
+      containers: $(containerRegistry)/$(imageRepository):$(tag)
